<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo"
    tools:context="com.tecnologiasintech.geebsoftapp.LoginSystem.ResetPasswordActivity"
    android:id="@+id/activity_reset_password"
    >


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="#ffffff">


        <!--<ImageView-->
            <!--android:layout_width="@dimen/logo_w_h"-->
            <!--android:layout_height="@dimen/logo_w_h"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:src="@mipmap/ic_launcher" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"

            android:textSize="20sp"
            android:textColor="@color/abc_secondary_text_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"

            android:textSize="14dp"
            android:textColor="#95a5a6" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:textColor="@color/black_overlay"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black_overlay"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"

            android:text="@string/btn_reset_password"
            android:background="#FE2E2E"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btn_reset_password_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/btn_back"
            app:layout_anchor="@+id/linearLayout"
            app:layout_anchorGravity="top|left"
            android:layout_gravity="top|center_horizontal"
            android:textColor="#FE2E2E"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/transparent"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
