<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout7"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="#ffffff"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" >

                <TextView
                    android:text="@string/title_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/abc_secondary_text_material_light"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <ImageView
                    android:src="@drawable/barra_gris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="15dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/username_area"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="38dp"
                    android:layout_marginStart="38dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/edittext_name"
                        android:hint="@string/edittext_username"
                        android:textColorHint="@color/colorHint"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/email_area"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="38dp"
                    android:layout_marginStart="38dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/edittext_email"
                        android:textSize="@dimen/sizeTextForm"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/edittext_email"
                        android:layout_marginTop="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/password_area"
                    android:layout_marginEnd="38dp"
                    android:layout_marginStart="38dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/editText6"
                        android:textSize="@dimen/sizeTextForm"
                        android:textColorHint="@color/colorHint"
                        android:hint="@string/edittext_password"
                        android:layout_marginTop="10dp" />

                </LinearLayout>

                <ImageView
                    android:src="@drawable/barra_gris_or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView13"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/linearLayout2"
                    android:layout_marginBottom="30dp" >

                    <Button
                        android:background="@drawable/button_facebook_login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/button"
                        android:layout_marginStart="34dp"
                        android:layout_marginEnd="34dp"
                        android:layout_marginBottom="10dp" />

                    <Button
                        android:background="@drawable/button_google_login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:id="@+id/button3"
                        android:layout_marginStart="34dp"
                        android:layout_marginEnd="34dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>